@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.23 2012/08/12 07:20:15 ryoon Exp $
+# $NetBSD: Makefile,v 1.24 2012/08/24 12:48:11 ryoon Exp $
 #
 
 DISTNAME=	fotoxx-12.08
@@ -26,8 +26,10 @@ INSTALL_TARGET=	install
 .include "../../mk/bsd.prefs.mk"
 
 .if exists(/usr/include/execinfo.h)
-CXXFLAGS+=	-DHAVE_LIBEXECINFO
+CXXFLAGS+=	-DHAVE_EXECINFO_H
+.  if (${OPSYS} == "NetBSD")
 LDFLAGS+=	-lexecinfo
+.  endif
 .endif
 
 .include "../../graphics/tiff/buildlink3.mk"
