@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.20 2012/07/01 15:47:02 wiz Exp $
+# $NetBSD: Makefile,v 1.21 2012/08/12 16:16:39 wiz Exp $
 #
 
-DISTNAME=		libdrm-2.4.38
+DISTNAME=		libdrm-2.4.39
 CATEGORIES=		x11 graphics
 MASTER_SITES=		http://dri.freedesktop.org/libdrm/
 EXTRACT_SUFX=		.tar.bz2
