@@ -1,8 +1,8 @@
-$NetBSD: distinfo,v 1.22 2012/08/13 07:02:00 wiz Exp $
+$NetBSD: distinfo,v 1.23 2012/08/13 09:05:07 wiz Exp $
 
-SHA1 (libdrm-2.4.38.tar.bz2) = e90e28a0db2c32238e445f48af9683600c5f191f
-RMD160 (libdrm-2.4.38.tar.bz2) = 59667c2d37c2e57155b2c0095881171b7098d82b
-Size (libdrm-2.4.38.tar.bz2) = 484514 bytes
+SHA1 (libdrm-2.4.39.tar.bz2) = c0e841850d7164c63d36f486ca3a64040357660e
+RMD160 (libdrm-2.4.39.tar.bz2) = 0f30ecc36a839d8cc71fc099a7581ffed0cd7fb1
+Size (libdrm-2.4.39.tar.bz2) = 492215 bytes
 SHA1 (patch-ab) = 66dadd3244bfa9c69be0982fd2108deb94483de2
 SHA1 (patch-ac) = 67c998df7dfc0dabc86320ea6d015cede3e464ea
 SHA1 (patch-ad) = ea3ef8de8db782ddab23f182f1e6bd9d8f612a78
